[gd_scene load_steps=7 format=3 uid="uid://c4fkn8x0lamj7"]

[ext_resource type="PackedScene" uid="uid://b5wu5aa3tym70" path="res://scenes/button.tscn" id="1_2vbmg"]
[ext_resource type="Script" path="res://scripts/main_menu_controller.gd" id="1_qtkm2"]
[ext_resource type="Script" path="res://scripts/scene_change_button.gd" id="1_wqnbb"]
[ext_resource type="Texture2D" uid="uid://u23h212msltg" path="res://textures/bg.png" id="2_gwsw8"]
[ext_resource type="Texture2D" uid="uid://bw6qf4tv1hpnl" path="res://textures/waterfall.png" id="3_xgdog"]
[ext_resource type="Texture2D" uid="uid://caiyldyeyeoe8" path="res://textures/pause_menu.png" id="7_ke855"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_qtkm2")

[node name="Waterfall" type="Sprite2D" parent="."]
position = Vector2(581, 320)
scale = Vector2(0.427966, 0.427966)
texture = ExtResource("3_xgdog")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(-571, 316)
scale = Vector2(0.436672, 0.436672)
texture = ExtResource("2_gwsw8")

[node name="Bg2" type="Sprite2D" parent="."]
position = Vector2(1680, 314)
scale = Vector2(0.436672, 0.436672)
texture = ExtResource("2_gwsw8")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -363.0
offset_top = 84.0
offset_right = 364.0
offset_bottom = 289.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 125
text = "Disconnect"
horizontal_alignment = 1

[node name="Play" parent="." instance=ExtResource("1_2vbmg")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -218.5
offset_top = -333.0
offset_right = 218.5
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" parent="Play" index="2"]
offset_left = 0.5
offset_right = 0.5
text = "Play
"

[node name="BottomAnchor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.45, 0.45)

[node name="HBoxContainer" type="HBoxContainer" parent="BottomAnchor"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -491.111
offset_top = -260.0
offset_right = 482.889
offset_bottom = -92.9999
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="Lore" parent="BottomAnchor/HBoxContainer" instance=ExtResource("1_2vbmg")]
layout_mode = 2
script = ExtResource("1_wqnbb")
scene_path = "res://intro_cutscene.tscn"

[node name="Label" parent="BottomAnchor/HBoxContainer/Lore" index="2"]
offset_left = 0.5
offset_right = 0.5
text = "Replay Lore"

[node name="Controls" parent="BottomAnchor/HBoxContainer" instance=ExtResource("1_2vbmg")]
layout_mode = 2
text = "
"

[node name="Label" parent="BottomAnchor/HBoxContainer/Controls" index="2"]
offset_left = 0.5
offset_right = 0.5
text = "Controls"

[node name="Controls" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.427451)

[node name="TextureRect" type="TextureRect" parent="Controls"]
layout_mode = 0
offset_left = 44.0
offset_right = 2604.0
offset_bottom = 1600.0
scale = Vector2(0.405786, 0.405786)
texture = ExtResource("7_ke855")

[node name="Title" type="Label" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.0
offset_top = -223.0
offset_right = 281.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Controls" type="RichTextLabel" parent="Controls"]
layout_mode = 0
offset_left = 279.0
offset_top = 213.0
offset_right = 889.0
offset_bottom = 522.0
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "Left:
Right:
Jump:
Restart Level:
Pause:
Toggle Music:
"

[node name="Keys" type="RichTextLabel" parent="Controls"]
layout_mode = 0
offset_left = 262.0
offset_top = 213.0
offset_right = 872.0
offset_bottom = 522.0
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "[right][color=#aaaaaa][[color=white]A[color=#aaaaaa]]  [color=#aaaaaa][[color=white]Left Arrow[color=#aaaaaa]]
[color=#aaaaaa][[color=white]D[color=#aaaaaa]]  [color=#aaaaaa][[color=white]Right Arrow[color=#aaaaaa]]
[color=#aaaaaa][[color=white]Space[color=#aaaaaa]]  [color=#aaaaaa][[color=white]W[color=#aaaaaa]]  [color=#aaaaaa][[color=white]Up Arrow[color=#aaaaaa]]
[color=#aaaaaa][[color=white]R[color=#aaaaaa]]
[color=#aaaaaa][[color=white]Esc[color=#aaaaaa]]
[color=#aaaaaa][[color=white]M[color=#aaaaaa]]"

[node name="UnformattedControls" type="RichTextLabel" parent="Controls"]
visible = false
layout_mode = 0
offset_left = 279.0
offset_top = 213.0
offset_right = 889.0
offset_bottom = 522.0
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "Left: [A]  [Left Arrow]
Right: [D]  [Right Arrow]
Jump: [Space]  [W]  [Up Arrow]
Restart Level: [R]
Pause: [Esc]
Toggle Music: [M]
"

[node name="CenterAnchor" type="Control" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Close" parent="Controls/CenterAnchor" instance=ExtResource("1_2vbmg")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 184.0
offset_right = 217.0
offset_bottom = 351.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(218, 83.5)

[node name="Label" parent="Controls/CenterAnchor/Close" index="2"]
text = "Close"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="BottomAnchor/HBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Controls/CenterAnchor/Close" to="." method="_on_close_controls_pressed"]

[editable path="Play"]
[editable path="BottomAnchor/HBoxContainer/Lore"]
[editable path="BottomAnchor/HBoxContainer/Controls"]
[editable path="Controls/CenterAnchor/Close"]
